crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_a_u0009.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa a\t\"####)"
---
[
    Token {
        data: "DOCTYPEa a\t",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
